--- a/SQLCompare.UI/wwwroot/css/_common.scss
+++ b/SQLCompare.UI/wwwroot/css/_common.scss
@@ -5,9 +5,10 @@
 $ourgreen: #39B54A;
 $row-header-height: 37px;
 $switch-width: 32px;
+$color-scrollbar: $ourgreen;
+$color-scrollbar-track: #ECECEC;
 
 /* -------begin bootstrap customization-------- */
-
 $theme-colors: ( primary: $ourgreen, info: $ourgreen );
 $font-size-base: 0.8rem;
 $line-height-base: 1.3;
@@ -59,3 +60,42 @@ body {
         transform: rotate(360deg);
     }
 }
+
+/* begin custom scrollbars */
+::-webkit-scrollbar {
+    height: 12px;
+    width: 14px;
+    overflow: visible;
+}
+
+::-webkit-scrollbar-button {
+    height: 0;
+    width: 0;
+}
+
+::-webkit-scrollbar-track {
+    background-clip: padding-box;
+    border: solid transparent;
+    border-width: 3px;
+    border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background-clip: padding-box;
+    border: solid transparent;
+    border-width: 3px;
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $color-scrollbar;
+}
+
+::-webkit-scrollbar-track {
+    background-color: $color-scrollbar-track;
+}
+/* end custom scrollbars */
